# outcome-engineering

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: publish.yml  test.yml
api/: Dockerfile  Dockerfile.mcp  README.md  pyproject.toml
api/src/oe_api/: __init__.py  app.py  auth.py  authz.py  db.py  schemas.py  serialize.py  settings.py
api/src/oe_api/routes/: flywheel.py  graphs.py  nodes.py  system.py
api/src/oe_cli/: __init__.py  auth_flow.py  client.py  config.py  main.py  skill_installer.py
api/src/oe_cli/skills/oe-best-practices/: SKILL.md
api/src/oe_cli/skills/oe-best-practices/references/: icps.md  jobs.md  opportunities.md  outcomes.md  strategy.md
api/src/oe_cli/skills/oe-cli/: SKILL.md
api/src/oe_cli/skills/oe-graph-audit/: SKILL.md
api/src/oe_cli/skills/oe-grill/: SKILL.md
api/src/oe_cli/skills/oe-validate/: SKILL.md
api/src/oe_core/: __init__.py  context.py  errors.py  model.py  rules.py  selector.py  validation.py
api/src/oe_mcp/: __init__.py  server.py
api/src/oe_store/: __init__.py  db.py  models.py  store.py
api/src/oe_store/migrations/: env.py
api/src/oe_store/migrations/versions/: 0001_initial.py  0002_node_job_refs.py
api/tests/: test_api.py  test_cli.py  test_core.py  test_mcp.py  test_store.py
docs/: concepts.md
docs/diary/: 2026-07-03-rename-outcome-graph.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: GraphView.svelte  api.ts  markdown.ts
skills/oe-release/: SKILL.md
(+7 files in other folders)
