[project]
name = "outcome-engineering"
version = "0.1.3"
description = "Outcome Engineering: multi-tenant product graph server, CLI, and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "fastmcp>=2.0",
    "rich>=13.0",
]

[project.scripts]
oe = "oe_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oe_core", "src/oe_store", "src/oe_api", "src/oe_mcp", "src/oe_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
